--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (153)</h2>
+                <h2>APWorlds (154)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -1347,6 +1347,13 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Wargroove/wargroove/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090824439710625822">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1231599123883364383">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
 
                 <h3><span id="WarioLand1"></span> Wario Land 1 (GB)</h3>
