--- a/apworlds.html
+++ b/apworlds.html
@@ -120,6 +120,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/BrandenEK/AShortHike.Randomizer/releases">Link</a>]</li>
+                    <li><strong>Optional Game Mod</strong> [<a href="https://github.com/BrandenEK/AShortHike.MapTracker/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/chandler05/shorthike-archipelago-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/A%20Short%20Hike/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1224389725922787389">Link</a>]</li>
@@ -191,6 +192,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Beta APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1090815418731597884/1231737701934567484">Link</a>]</li>
                     <li><strong>Game Mods</strong> [<a href="https://github.com/BrandenEK/Blasphemous.Modding.Installer/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.ModdingAPI/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.Randomizer/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.Randomizer.Multiworld/releases">Link</a>]</li>
                     <li><strong>Optional Game Mods</strong> [<a href="https://github.com/BrandenEK/Blasphemous.Randomizer.MapTracker/releases">Link</a>] [<a href="https://github.com/BadMagic100/Blasphemous-PrieWarp/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.BootsOfPleading/releases">Link</a>] [<a href="https://github.com/BrandenEK/Blasphemous.DoubleJump/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Blasphemous/setup/en">Link</a>]</li>
@@ -900,7 +902,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>APWorld (ROM-Free Generation)</strong> [<a href="https://github.com/Zunawe/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://github.com/AliceMousie/emerald-ap-tracker/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/seto10987/Archipelago-Emerald-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Emerald/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
                 </ul>
@@ -1353,6 +1355,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1231599123883364383">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
 
