--- a/index.html
+++ b/index.html
@@ -44,12 +44,33 @@
                     </p>
                 </header>
 
+                <h2 id="D20240422">April 22nd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Skyrim Special Edition [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240421">April 21st, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Soul Blazer [<a href="apworlds.html#SoulBlazer">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Tyrian [<a href="apworlds.html#Tyrian">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> A Short Hike [<a href="apworlds.html#AShortHike">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Tyrian [<a href="apworlds.html#Tyrian">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -61,7 +82,18 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Beta APWorld</strong> Blasphemous [<a href="apworlds.html#Blasphemous">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Manual APWorld</strong> Azure Dreams [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Pac-Man World 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Pokemon Snap [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Emerald [<a href="apworlds.html#PokemonEmerald">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240420">April 20th, 2024</h2>
