--- a/index.html
+++ b/index.html
@@ -47,11 +47,27 @@
                 <h2 id="D20240422">April 22nd, 2024</h2>
 
                 <ul>
-                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                    <li><strong>AP RELEASE</strong> 0.4.6 [<a href="https://github.com/ArchipelagoMW/Archipelago/releases/tag/0.4.6">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pokeclicker [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Skyrim Special Edition [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game PR Opened</strong> Aquaria [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3197">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240421">April 21st, 2024</h2>
