--- a/apworlds.html
+++ b/apworlds.html
@@ -48,7 +48,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (154)</h2>
+                <h2>APWorlds (156)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -579,6 +579,13 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1124167486078722189">Link</a>]</li>
                 </ul>
 
+                <h3><span id="IntoTheBreach"></span> Into the Breach (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Ishigh1/ITB-randomizer-for-AP/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1127025077196701828">Link</a>]</li>
+                </ul>
+
                 <span id="J"></span>
 
                 <h3><span id="K"></span><span id="KingdomHearts1"></span> Kingdom Hearts 1 Final Mix (PC)</h3>
@@ -738,6 +745,13 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/MisterIbis/MMBN3_AP_Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/MegaMan%20Battle%20Network%203/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1141248361316503553">Link</a>]</li>
+                </ul>
+
+                <h3><span id="MegaManX"></span> Mega Man X (SNES)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/TheLX5/Archipelago/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1134349743984742520">Link</a>]</li>
                 </ul>
 
                 <h3><span id="MegaManX3"></span> Mega Man X3 (SNES)</h3>
@@ -1140,8 +1154,8 @@
                 <h3><span id="SuperJunkoid"></span> Super Junkoid (Super Metroid Hack) (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1227272726964605018">Link</a>]</li>
-                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1225853825852637184">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1232070825167945840">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1196920710724071555/1232070825167945840">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1196920710724071555">Link</a>]</li>
                 </ul>
 
