--- a/index.html
+++ b/index.html
@@ -51,8 +51,17 @@
                 </ul>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mario and Luigi Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
                     <li><strong>APWorld Update</strong> osu! [<a href="apworlds.html#Osu">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Sunshine [<a href="apworlds.html#SuperMarioSunshine">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Bloons TD 6 [<a href="apworlds.html#BloonsTD6">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -63,11 +72,17 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New APWorld</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New Game PR Opened</strong> Aquaria [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3197">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Tracker Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Super Junkoid (Super Metroid Hack) [<a href="apworlds.html#SuperJunkoid">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240421">April 21st, 2024</h2>
