--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
                     </p>
                 </header>
 
+                <h2 id="D20240423">April 23rd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bejewed 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Conan Exiles [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pokemon Snap [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240422">April 22nd, 2024</h2>
 
                 <ul>
