--- a/index.html
+++ b/index.html
@@ -44,22 +44,49 @@
                     </p>
                 </header>
 
-                <h2 id="D20240423">April 23rd, 2024</h2>
+                <h2 id="D20240424">April 24th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> LEGO Batman: The Videogame [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240423">April 23rd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hammerwatch [<a href="apworlds.html#Hammerwatch">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minit [<a href="apworlds.html#Minit">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Bejewed 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Conan Exiles [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Outer Wilds [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Pokemon Snap [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> The Simpsons: Hit & Run [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Mario and Luigi Superstar Saga [<a href="apworlds.html#MarioAndLuigiSuperstarSaga">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon Emerald [<a href="apworlds.html#PokemonEmerald">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240422">April 22nd, 2024</h2>
