--- a/apworlds.html
+++ b/apworlds.html
@@ -174,7 +174,8 @@
                 <h3><span id="B"></span><span id="BanjoTooie"></a> Banjo Tooie (N64)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Connector + Setup Guide</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/releases">Link</a>]</li>
+                    <li><strong>APWorld + Connector</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/jjjj12212/Archipelago-BanjoTooie/blob/main/worlds/banjo_tooie/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1135352499172286505">Link</a>]</li>
                 </ul>
 
