--- a/index.html
+++ b/index.html
@@ -44,14 +44,26 @@
                     </p>
                 </header>
 
+                <h2 id="D20240426">April 26th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240425">April 25th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Mega Man X [<a href="apworlds.html#MegaManX">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Astalon: Tears of the Earth [<a href="apworlds.html#AstalonTearsOfTheEarth">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Manual APWorld Update</strong> Genshin Impact [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
