--- a/index.html
+++ b/index.html
@@ -46,14 +46,39 @@
                     </p>
                 </header>
 
+                <h2 id="D20240510">May 10th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Spelunker [<a href="apworlds.html#Spelunker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Monster Sanctuary [<a href="apworlds.html#MonsterSanctuary">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Final Fantasy XIV [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240509">May 9th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario 64 [<a href="apworlds.html#PaperMario64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 2 Remake [<a href="apworlds.html#ResidentEvil2Remake">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Risk of Rain [<a href="apworlds.html#RiskOfRain">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                 </ul>
 
@@ -68,6 +93,7 @@
                 <ul>
                     <li><strong>Tracker Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
                     <li><strong>Tracker Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Kingdom Hearts: Chain of Memories [<a href="apworlds.html#KingdomHeartsChainOfMemories">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240508">May 8th, 2024</h2>
