--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     </p>
                 </header>
 
+                <h2 id="D20240516">May 16th, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bowser's Fury [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240515">May 15th, 2024</h2>
 
                 <ul>
