--- a/index.html
+++ b/index.html
@@ -53,16 +53,24 @@
                 </ul>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New Game Merged</strong> Aquaria [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/3197">Link</a>]</li>
                     <li><strong>New Game Merged</strong> Bomb Rush Cyberfunk [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2925">Link</a>]</li>
+                    <li><strong>New Game Merged</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2795">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New Manual APWorld</strong> Doors (Roblox) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Yume Nikki [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240516">May 16th, 2024</h2>
