--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
                     </p>
                 </header>
 
+                <h2 id="D20240518">May 18th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240517">May 17th, 2024</h2>
 
                 <ul>
@@ -53,12 +59,16 @@
                 </ul>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Metroid Map Rando [<a href="apworlds.html#SuperMetroidMapRando">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Bomb Rush Cyberfunk [<a href="apworlds.html#BombRushCyberfunk">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
                 </ul>
 
@@ -69,7 +79,9 @@
                 </ul>
 
                 <ul>
+                    <li><strong>New Manual APWorld</strong> Black Souls [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Doors (Roblox) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Pinball FX3 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> Yume Nikki [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
