--- a/apworlds.html
+++ b/apworlds.html
@@ -932,6 +932,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/JKBSunshine/PMR_APWorld/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/Phantom5800/pmr-emotracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/JKBSunshine/PMR_APWorld/blob/main/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1059875783071502398">Link</a>]</li>
                 </ul>
