--- a/index.html
+++ b/index.html
@@ -46,11 +46,30 @@
                     </p>
                 </header>
 
+                <h2 id="D20240520">May 19th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240518">May 18th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> A Hat in Time [<a href="apworlds.html#AHatInTime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                     <li><strong>APWorld Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> The Witness [<a href="apworlds.html#TheWitness">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -59,15 +78,24 @@
 
                 <ul>
                     <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Blast Corps [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle Deluxe [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle Nights [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pokemon XG: Next Gen [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Shapez [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
                     <li><strong>New APWorld</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Against the Storm [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Fighting Game Builder [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
