--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (163)</h2>
+                <h2>APWorlds (164)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -1117,6 +1117,15 @@
                     <li><strong>Client</strong> [<a href="https://madisonsilver.github.io/seedling/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/madisonsilver/SeedlingArchipelagoWorld/blob/main/seedling/docs/multiworld_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1141542795966943254">Link</a>]</li>
+                </ul>
+
+                <h3><span id="SentinelsOfTheMultiverse"></span> Sentinels of the Multiverse (PC / Physical)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Totox00/Archipelago-sotm/releases">Link</a>]</li>
+                    <li><strong>Client</strong> Rust program; Needs to be compiled from source [<a href="https://github.com/Totox00/ap-sotm-client/tree/dedicated-apworld">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Totox00/Archipelago-sotm/blob/main/worlds/sotm/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1241869295848521730">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Shivers"></span> Shivers (PC)</h3>
