--- a/index.html
+++ b/index.html
@@ -46,10 +46,46 @@
                     </p>
                 </header>
 
-                <h2 id="D20240520">May 19th, 2024</h2>
+                <h2 id="D20240520">May 20th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sentinels of the Multiverse [<a href="apworlds.html#SentinelsOfTheMultiverse">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Resident Evil 3 Remake [<a href="apworlds.html#ResidentEvil3Remake">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Game Merged</strong> A Hat in Time [<a href="https://github.com/ArchipelagoMW/Archipelago/pull/2640">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240519">May 19th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Scooby-Doo! Night of 100 Frights [<a href="apworlds.html#ScoobyDooNightOf100Frights">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Civilization VI [<a href="apworlds.html#CivilizationVI">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice (Yahtzee) [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Sentinels of the Multiverse [<a href="apworlds.html#SentinelsOfTheMultiverse">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240518">May 18th, 2024</h2>
